--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "This is a project for javascript coursera class",
   "main": "index.html",
   "scripts": {
-    "start": "npm start lite",
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lite": "lite-server"
+    "lite": "lite-server",
+    "dev": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,5 @@
   "homepage": "https://github.com/Harleysplayground/bootstrap#readme",
   "devDependencies": {
     "lite-server": "^2.4.0"
-  },
-  "scripts": {
-    "dev": "lite-server"
   }
 }
