--- a/bs4/conFusion/package.json
+++ b/bs4/conFusion/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "lite-server": "^2.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bootstrap-social": "^5.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7"
   }
